# tapki

./: .gitignore  CMakeLists.txt  LICENSE  TODO  amalgam-script.c  amalgam.c  tapki.h  test.c
.github/workflows/: amalgam.yml
src/: amalgam.c  tapki.c  tapki.h
